# StickyNote

./: .gitignore  CMakeLists.txt  DEVELOPMENT_GUIDE.md  StickyNoteManager.slnx  jianzuwang_mini_proj.md
.codebuddy/rules/: learnQt.md
StickyNoteManager/: StickyNoteManager.vcxproj
learn/: mainwindow.md  notemanager_implementation.md  phase1_development.md  phase1_knowledge.md  phase2_development.md  phase2_knowledge.md  phase3_code_analysis.md  phase3_development.md  phase3_features_3_5_to_3_9.md  phase3_knowledge.md  phase4_development.md  phase4_knowledge.md  qt_knowledge.md  sidebar_layout.md  tabbar.md  tilebar.md  titlebar_deep_dive.md  window_resize.md
src/: main.cpp
src/common/: global.h  notedata.cpp  notedata.h
src/core/: notecontroller.cpp  notecontroller.h  notemanager.cpp  notemanager.h  undocommand.h  undostack.cpp  undostack.h
src/core/commands/: addnotecommand.cpp  addnotecommand.h  changecategorycommand.cpp  changecategorycommand.h  changecolorcommand.cpp  changecolorcommand.h  deletemultiplenotescommand.cpp  deletemultiplenotescommand.h  deletenotecommand.cpp  deletenotecommand.h  editnotecommand.cpp  editnotecommand.h  pinnotecommand.cpp  pinnotecommand.h
src/models/: notefilterproxymodel.cpp  notefilterproxymodel.h  notelistmodel.cpp  notelistmodel.h
src/ui/: mainWindow.cpp  mainWindow.h  notecarddelegate.cpp  notecarddelegate.h  noteeditdialog.cpp  noteeditdialog.h  notelistview.cpp  notelistview.h  notepreviewdialog.cpp  notepreviewdialog.h  sidebar.cpp  sidebar.h  tilebar.cpp  tilebar.h  titlebar.cpp  titlebar.h
src/ui/components/: colorselector.cpp  colorselector.h  toastmanager.cpp  toastmanager.h  toastwidget.cpp  toastwidget.h
src/utils/: windowhelper.cpp  windowhelper.h
tests/: test_notefilterproxymodel.cpp  test_notemanager.cpp
